--- a/src/pages/Continent/Continent.css
+++ b/src/pages/Continent/Continent.css
@@ -3,20 +3,21 @@
   width: 100vw;
   height: 100vh;
   background: url(@/assets/pictures/home/background.png) no-repeat center center;
-  background-size: cover;
-  background-position: top;
+  background-size: 150%;
+    background-position: -20vw -30vh;
 }
+
 .main .continent {
   position: absolute;
   top: 15vh;
   left: 5vw;  
 }
-.continent .image {
+.continent image {
   width: 40vw;
   height: 80vh;
 }
 
-.words {
+.main .words {
   position: absolute;
   left: 40vw;
   font-size: large;
@@ -26,7 +27,7 @@
   margin-top: 2vh;
 }
 
-.icons-container {
+.main .icons-container {
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -38,15 +39,15 @@
   width: 5vw;
   height: 14vh;
   margin-left: 4vw;
+ 
 }
 
-.continent-info {
+.main .continent-info {
   position: absolute;
   top: 20vh;
   left: 50vw;
   width: 335rpx;
   height: 226rpx;
-  background-color: #bae3ac;
   border-radius: 30rpx;
 }
 .continent-info .name {
@@ -70,6 +71,7 @@ left: 3vw;
   width: 4vw;
   height: 7vh;
   vertical-align: middle;
+  
 }
 
 /* 家园 */
@@ -91,6 +93,36 @@ left: 3vw;
   position: relative;
   overflow: hidden;
 }
+.continent-left .buildings-btns-group {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 11;
+  padding: 20rpx;
+  box-sizing: border-box; 
+}
+.buildings-btns-group .buildings-title {
+  font-size: 22rpx;
+  text-align: center;
+}
+/* .buildings-btns-group .buildings-btns {
+
+} */
+.buildings-btns .buildings-btn-item {
+  width: 158rpx;
+  height: 44rpx;
+  background: #9AEB8E;
+  box-shadow: 0rpx 3rpx 5rpx 1rpx rgba(0,0,0,0.16), inset 0rpx 3rpx 5rpx 1rpx rgba(0,0,0,0.16);
+  border-radius: 12rpx 12rpx 12rpx 12rpx;
+  margin: 30rpx auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 25rpx;
+  color: #707070;
+}
 .continent-left .left-bg {
   position: absolute;
   z-index: 10;
@@ -111,9 +143,8 @@ left: 3vw;
 }
 .left-group .left-title {
   text-align: center;
-  padding-left: 80rpx;
   box-sizing: border-box;
-  font-size: 26rpx;
+  font-size: 22rpx;
   color: #000;
   height: 40rpx;
   display: flex;
@@ -192,6 +223,51 @@ left: 3vw;
   box-shadow: 0rpx 3rpx 5rpx 1rpx rgba(0,0,0,0.16), inset 0rpx 3rpx 5rpx 1rpx rgba(0,0,0,0.16);
   border-radius: 21rpx 21rpx 21rpx 21rpx;
 }
+.left-group .left-list-bad {
+  height: calc(100% - 40rpx - 36rpx);
+}
+.left-list .list-item-bad {
+  flex-shrink: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 45%;
+  margin-right: calc((100% - (45% * 2) ) / 2);
+  margin-bottom: 10rpx;
+  position: relative;
+}
+.left-list .list-item-bad:nth-child(2n) {
+  margin-right: 0;
+}
+.left-list .list-item-bad:nth-child(3n) {
+  margin-right: calc((100% - (45% * 2) ) / 2);
+}
+.left-list .list-item-bad .number-box {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 18rpx;
+  height: 18rpx;
+  background: #707070;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #F5F5F5;
+  white-space: nowrap;
+}
+.left-list .list-item-bad .purify-btn {
+  width: 62rpx;
+  height: 23rpx;
+  background: #B9FFE5;
+  box-shadow: 0rpx 3rpx 5rpx 1rpx rgba(0,0,0,0.16), inset 0rpx 3rpx 5rpx 1rpx rgba(0,0,0,0.16);
+  border-radius: 7rpx 7rpx 7rpx 7rpx;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 13rpx;
+  color: #0D0F12;
+}
 
 /* 右侧 */
 .homeland-continent .continent-right {
@@ -222,4 +298,77 @@ left: 3vw;
   height: 3rpx;
   background: #82C679;
   border-radius: 3rpx;
+}
+
+/* 产能报告 */
+/* 这个report-continent 同 homeland-continent */
+.report-continent {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  width: 382rpx;
+  height: 256rpx;
+  background: #FFFFFF;
+  box-shadow: 0rpx 3rpx 5rpx 1rpx rgba(0,0,0,0.16), inset 0rpx 3rpx 5rpx 1rpx rgba(0,0,0,0.16);
+  border-radius: 41rpx 0rpx 0rpx 0rpx;
+  display: flex;
+}
+.report-continent .report-bg {
+  position: absolute;
+  z-index: 10;
+  top: 10rpx;
+  left: 10rpx;
+  width: 95%;
+  height: 90%;
+  border-radius: 41rpx;
+  background-image: radial-gradient(at 50% 50%, rgba(186 ,227, 172, 1),rgba(186 ,227, 172, .5), rgba(255, 255, 255, .8));
+}
+.report-continent .report-box {
+  position: absolute;
+  z-index: 20;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  padding: 20rpx;
+  box-sizing: border-box;
+}
+.report-box .report-title {
+  font-size: 22rpx;
+  text-align: center;
+}
+.report-box .report-content {
+  height: calc(100% - 36rpx * 3);
+  width: 80%;
+  padding: 20rpx;
+  box-sizing: border-box;
+  color: #707070;
+  font-size: 20rpx;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  background: #BBE2AB;
+  margin: 18rpx auto;
+  position: relative;
+}
+.report-box .report-content::before {
+  content: '';
+  position: absolute;
+  left: -12%;
+  top: -12%;
+  display: block;
+  width: 124%;
+  height: 124%;
+  background: url(@/assets/pictures/continent/report-bg.png) no-repeat center center;
+  background-size: 100% 100%;
+}
+.report-content .report-item {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.report-box .report-bottom {
+  font-size: 22rpx;
+  padding-left: 40rpx;
+  box-sizing: border-box;
 }
