--- a/src/pages/Shop/Shop.css
+++ b/src/pages/Shop/Shop.css
@@ -59,6 +59,15 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  position: relative;
+}
+
+.image-container .item-name {
+  position: absolute;
+  right: 5rpx;
+  top: 34vh;
+  color: #fff;
+  width: max-content;
 }
 
 .item-image {
@@ -252,9 +261,9 @@ box-shadow: 0px 2px 3px 1px rgba(0, 0, 0, 0.16), inset 0px 2px 3px 1px rgba(0, 0
   animation-play-state: paused;
 }
 /* 抽卡结果 */
-.lottery-result-modal {
+/* .lottery-result-modal {
   /* width: max-content; */
-}
+/* }  */
 .lottery-result-modal .modal-header {
   color: #F08686;
   font-size: 22rpx;
